# mot.cpp

./: .dockerignore  .gitignore  Dockerfile  README.md  meson.build  meson_options.txt  mot-eval.sh  mot.sh
app/: config.json  main.cpp  meson.build  mot-eval.py  mot.cpp
app/config/: botsort.json  botsort.toml  sort.json  sort.toml
include/assignment/: hungarian.hpp  lap.h
include/common/: detection.hpp  frame.hpp  metrics.hpp
include/kalman/: base.hpp  kalman.hpp  xysr.hpp  xywh.hpp
include/track/: base.hpp  sort.hpp
include/tracker/: base.hpp  sort.hpp
include/tracking/: base.hpp  botsort.hpp  factory.hpp  sort.hpp  tracker.hpp
include/utils/: json_utils.hpp
src/kalman/: xysr.cpp  xywh.cpp
src/track/: base.cpp  sort.cpp
src/tracker/: sort.cpp
src/tracking/: base.cpp  botsort.cpp  sort.cpp  tracker.cpp
subprojects/: TensorRT-Vision.wrap  mot.cpp.wrap  reflect-cpp.wrap  tomlplusplus.wrap  vision-core.wrap
tests/: meson.build  test_botsort.cpp  test_hungarian.cpp  test_kalman.cpp  test_sort.cpp
